# parq-blockmodel

./: .buildinfo  .gitignore  LICENSE  README.md  design_ijk_metadata.html  developer_testing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  todo.html  user_guide.html
.doctrees/: design_ijk_metadata.doctree  developer_testing.doctree  environment.pickle  index.doctree  sg_execution_times.doctree  todo.doctree  user_guide.doctree
.doctrees/api/: mesh.doctree  modules.doctree
.doctrees/auto_examples/: 01_regular_geometry.doctree  02_rotated_geometry.doctree  03_visualise_blockmodel.doctree  04_rotated_blockmodel.doctree  05_heatmap.doctree  06_reblocking.doctree  07_mesh_export.doctree  08_sparse_parquet_to_pbm.doctree  09_rotated_parquet_to_pbm.doctree  10_calculated_attributes.doctree  11_reblocking_calculated_attributes.doctree  12_calculated_with_custom_lookups.doctree  13_polygon_flagging.doctree  14_surface_encoding.doctree  15_solid_flagging.doctree  16_trame_threshold_viewer.doctree  17_compression_framework.doctree  index.doctree  sg_execution_times.doctree
.doctrees/glossary/: glossary.doctree
.doctrees/license/: license.doctree
.doctrees/usage/: installation.doctree  quickstart.doctree
.doctrees/user_guide/: 01_geometry.doctree  02_blockmodels.doctree  02_geometry_coordinates.doctree  03_blockmodels.doctree  04_mesh_export.doctree  05_reports.doctree  06_reblocking.doctree  07_calculated_attributes.doctree  08_polygon_flagging.doctree  09_surface_encoding.doctree  10_solid_flagging.doctree  11_trame_visualization.doctree  12_compression_framework.doctree
.github/agents/: python-dev.agent.md
.github/workflows/: build_and_test.yml  docs_to_gh_pages.yml  publish_to_pypi.yml
_downloads/268503b2dfe6ec15542bd5cf2407b670/: 07_mesh_export.ipynb
_downloads/27078cfa3a435fb16056598dc37226f9/: 08_sparse_parquet_to_pbm.ipynb
_modules/: index.html
_sources/: design_ijk_metadata.rst  developer_testing.rst  index.rst.txt  sg_execution_times.rst  user_guide.rst
_sources/api/: mesh.rst  (+1 more)
_static/: geometry_coordinate_flow.dot
api/: mesh.html  modules.html
auto_examples/: 01_regular_geometry.html  02_rotated_geometry.html  03_visualise_blockmodel.html  04_rotated_blockmodel.html  05_heatmap.html  06_reblocking.html  07_mesh_export.html  08_sparse_parquet_to_pbm.html  09_rotated_parquet_to_pbm.html  10_calculated_attributes.html  11_reblocking_calculated_attributes.html  12_calculated_with_custom_lookups.html  13_polygon_flagging.html  14_surface_encoding.html  15_solid_flagging.html  16_trame_threshold_viewer.html  17_compression_framework.html  index.html  sg_execution_times.html
dev_examples/: downsample_example.py  upsample_example.py
docs/: conf.py  design_ijk_metadata.rst  index.rst  sg_execution_times.rst  user_guide.rst
examples/: 01_regular_geometry.py  02_rotated_geometry.py  03_visualise_blockmodel.py  04_rotated_blockmodel.py  05_heatmap.py  06_reblocking.py  07_mesh_export.py  09_rotated_parquet_to_pbm.py  10_calculated_attributes.py  11_reblocking_calculated_attributes.py  12_calculated_with_custom_lookups.py  13_polygon_flagging.py  14_surface_encoding.py  15_trame_threshold_viewer.py  16_trame_threshold_viewer.py
glossary/: glossary.html
license/: license.html
parq_blockmodel/: __init__.py  blockmodel.py  geometry.py  polygon_field.py  solid.py  surface.py
scratch/: custom_plotter.py  rotation_example.py  visualise_rotation.py
tests/: conftest.py
usage/: installation.html  quickstart.html
user_guide/: 01_geometry.html  02_blockmodels.html  02_geometry_coordinates.html  03_blockmodels.html  04_mesh_export.html  05_reports.html  06_reblocking.html  07_calculated_attributes.html  08_polygon_flagging.html  09_surface_encoding.html  10_solid_flagging.html  11_trame_visualization.html  12_compression_framework.html
(+696 files in other folders)
