[project]
name = "parq-blockmodel"
version = "0.1.8"
description = "A Python package for efficient storage, manipulation, and analysis of mining block models using Parquet files."
authors = [
    { name = "Greg", email = "11791585+elphick@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.25.2,<2.1",  # 2.1 max for numba->ydata-profiling compatibility
    "pyarrow>=16.0",
    "parq-tools>=0.3.1",
    "pyvista>=0.44.2",
    "geopandas>=1.1.1,<2",
]

[project.optional-dependencies]
profiling = ["ydata-profiling>=4.16.1", "setuptools"]  # setuptools needed: https://github.com/ydataai/ydata-profiling/pull/1619
progress = ["tqdm>=4.67.1"]
temporal = ["rioxarray>=0.18.0", "imageio>=2.37.0,<3", "imageio-ffmpeg>=0.6.0,<1"]
viz = ["plotly>=5.24.1", "kaleido>=1.1.0,<2"]
mesh = ["plyfile>=1.0.0"]
all = [
    "ydata-profiling>=4.16.1",
    "setuptools",
    "tqdm>=4.67.1",
    "rioxarray>=0.18.0",
    "plotly>=5.24.1",
    "imageio>=2.37.0,<3",
    "imageio-ffmpeg>=0.6.0,<1",
    "plyfile>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "sphinx>=7.3.7,<8",
    "sphinx-gallery>=0.14.0,<1",
    "sphinx-rtd-theme>=2.0.0,<3",
    "myst-parser>=3.0.1,<4",
    "sphinx-autodoc-typehints>=2.1.1,<3",
    "matplotlib>=3.7.2,<4",
    "coverage>=7.8.0,<8",
    "trame>=3.10.2,<4",
    "trame-vtk>=2.9.0,<3",
    "trame-vuetify>=3.0.1,<4",
    "sphinx-book-theme>=1.2.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parq_blockmodel"]

